@@ -1,4 +1,8 @@
 
+If you are using Oracle 10g XE, use the "universal" version,
+since the smaller Western European version has minimal support
+for Unicode and will not pass all of the RelStorage tests.
+
 Docs:
     http://www.oracle.com/pls/db102/homepage
 
@@ -6,11 +10,18 @@ Excellent setup instructions:
     http://www.davidpashley.com/articles/oracle-install.html
 
 Work around session limit (fixes ORA-12520):
-    ALTER SYSTEM SET PROCESSES=150 SCOPE=SPFILE
-    ALTER SYSTEM SET SESSIONS=150 SCOPE=SPFILE
+    ALTER SYSTEM SET PROCESSES=150 SCOPE=SPFILE;
+    ALTER SYSTEM SET SESSIONS=150 SCOPE=SPFILE;
     (then restart Oracle)
 
 Manually rollback an in-dispute transaction:
     select local_tran_id, state from DBA_2PC_PENDING;
     rollback force '$local_tran_id';
+
+It might be necessary to add the following lines to adapters/oracle.py,
+before all imports, to solve Oracle encoding issues.  (Let me know
+if you have to do this!)
+
+    import os
+    os.environ["NLS_LANG"] = ".AL32UTF8"
 
