@@ -22,13 +22,7 @@ from common import Adapter
 
 log = logging.getLogger("relstorage.adapters.postgresql")
 
-
-# Notes about adapters:
-#
-# An adapter must not hold a connection, cursor, or database state, because
-# RelStorage opens multiple concurrent connections using a single adapter
-# instance.
-# All OID and TID values are integers, not binary strings, except as noted.
+psycopg2.extensions.register_type(psycopg2.extensions.UNICODE)
 
 
 class PostgreSQLAdapter(Adapter):
@@ -179,6 +173,7 @@ class PostgreSQLAdapter(Adapter):
         """Open a database connection and return (conn, cursor)."""
         try:
             conn = psycopg2.connect(self._dsn)
+            conn.set_client_encoding('UNICODE')
             conn.set_isolation_level(isolation)
             cursor = conn.cursor()
             cursor.arraysize = 64
