@@ -1,5 +1,5 @@
 
-relstorage 0.9
+relstorage 1.0 beta
 
 - Renamed to reflect expanding database support.
 
@@ -41,8 +41,16 @@ relstorage 0.9
 - Implemented the storage iterator protocol, making it possible to copy
   transactions to and from FileStorage and other RelStorage instances.
 
-- Fixed a bug that caused OIDs to be reused after importing objects.
+- Fixed a bug that caused OIDs to be reused after importing transactions.
   Added a corresponding test.
+
+- Made it possible to disable garbage collection during packing.
+  Exposed the option in zope.conf.
+
+- Valery Suhomlinov discovered a problem with non-ASCII data in transaction
+  metadata.  The problem has been fixed for all supported databases.
+
+
 
 
 PGStorage 0.4
